grammar.js
    module: $ => seq(
      optional($.prelude),
      repeat($.import),
      repeat($._command),
    ),

    prelude: _ => 'prelude',

    // Import: `import Lean.Data.Json`
    // Module path is parsed as identifier or projection chain
    import: $ => seq('import', field('module', $._expression)),

    // ============================================================
    // Commands
    // ============================================================

    _command: $ => choice(
      // Declarations, notations, and examples with optional leading modifiers
      seq(repeat($._modifier), choice(
        $._declaration, $.declaration, $.example,
        $.notation, $.attribute,
      )),
      // Other commands (no modifiers)
      $.namespace,
      $.section,
      $.end,
      $.open,
      $.export,
      $.variable,
      $.universe,
      $.hash_command,
    ),

    // Modifier keywords consumed transparently (no node created)
    _modifier: _ => choice('noncomputable', 'partial', 'protected', 'private', 'unsafe', 'scoped', 'local'),


    // Namespace: `namespace Foo` or `namespace Foo.Bar.Baz`
    namespace: $ => seq('namespace', field('name', $._name)),

    open: $ => seq(
      'open',
      optional('scoped'),
      repeat1(field('namespace', $._name)),
      optional(choice(
        seq('hiding', repeat1(field('hiding', $._name))),
        seq('(', repeat1(field('only', $._name)), ')'),
        seq('in', $._command),
      )),
    ),

    // `export Foo (bar baz)`
    export: $ => seq(
      'export',
      field('class', $.identifier),
      '(', repeat($.identifier), ')',
    ),

    universe: $ => seq(choice('universe', 'universes'), repeat1($.identifier)),

    // `attribute [simp] Nat.add_zero`
    hash_command: $ => prec.left(seq(
      /#[a-zA-Z_]\w*/,
      repeat($._expression),
    )),

    // `example : 1 + 1 = 2 := by rfl`
    example: $ => seq(
      'example',
      optional(field('binders', $.binders)),
      optional($._type_spec),
      ':=',
      field('body', $._expression),
    ),

    // ============================================================
    // Declarations
    // ============================================================

    _declaration: $ => choice(
      $.definition,
      alias($._instance_decl, $.definition),
      $.constant,
      $.axiom,
      $.structure,
      $.inductive,
    ),

    // `@[simp] def f := 12` — declaration with leading attributes
    declaration: $ => seq(
      field('attributes', $.attributes),
      repeat($._modifier),
      $._declaration,
    ),

    // `@[simp, inline]` or `@[extern "foo"]`
    definition: $ => seq(
      field('kind', choice('def', 'theorem', 'lemma', 'abbrev')),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      $._declaration_body,
    ),

    // Shared body production for definition and instance — factored out
    // to let the parser reuse states across both declaration forms.
    _declaration_body: $ => choice(
      seq(':=', $._layout_start, field('body', $._expression), optional($._layout_end)),
      seq('where', $._layout_start, repeat1(seq(field('body', $.where_decl), optional($._layout_semicolon))), optional($._layout_end)),
      repeat1($.match_arm),
    ),

    // instance — name is optional; aliased to `definition` in the parse tree.
    // Instance binders are always bracketed (no bare identifier ambiguity with name).
    binders: $ => repeat1(choice($.identifier, $._bracketed_binder)),

    // Quantifier binders: `x y : Nat` or `(x : Nat) {y : Nat}`
    // Bare identifiers can have a trailing `: Type` annotation
    _bracketed_binder: $ => choice(
      $.explicit_binder,
      $.implicit_binder,
      $.instance_binder,
    ),

    explicit_binder: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      optional(seq(':=', field('default', $._expression))),
      ')',
    ),

    _type_spec: $ => seq(':', field('type', $._expression)),

    // ============================================================
    // Expressions
    // ============================================================

    _expression: $ => choice(
      $._atom,
      $.application,
      $.subscript,
      $.binary_expression,
      $.unary_expression,
      $.lift_method,
      $.borrowed,
      $.explicit,
      // postfix ! and ? are handled by subscript modifier and notation
      $.projection,
      $.arrow,
      $.fun,
      $.forall,
      $.exists,
      $.let,
      $.have,
      $.if,
      $.if_let,
      $.match,
      $.do,
      $.by,
    ),

    // Atoms: self-delimiting expressions that can appear as function arguments
    _atom: $ => choice(
      $.identifier,
      $.escaped_identifier,
      $.number,
      $.float,
      $.string,
      $.char,
      $.parenthesized,
      $.named_argument,
      $.tuple,
      $.anonymous_constructor,
      $.structure_instance,
      $.array,
      $.list,
      $.range,
      $.hole,
      $.synthetic_hole,
      $.quoted_name,
      $.double_quoted_name,
      $.ellipsis,
      $.sorry,
      $._boolean,
      $.cdot,
    ),

    // Function application: `f x y z`
    // Uses prec.left to parse `f x y` as `(f x) y`
    application: $ => prec.left(PREC.app, seq(
      field('name', $._expression),
      field('arguments', choice(
        $._atom,
        $.fun,
        $.if,
        $.match,
        $.do,
        $.by,
      )),
    )),

    // Array/list subscript: `arr[i]` or `arr[i]!` or `arr[i]?`
    subscript: $ => prec.left(PREC.proj, seq(
      field('object', $._expression),
      token.immediate('['),
      field('index', $._expression),
      ']',
      optional(field('modifier', choice('!', '?'))),
    )),

    // Qualified name: `foo` or `Foo.Bar.baz` - used for declarations and references
    _name: $ => seq(
      choice($.identifier, $.escaped_identifier),
      repeat(seq(token.immediate('.'), choice($.identifier, $.escaped_identifier))),
    ),

    // Projection: `x.foo` or `x.1` or `x.«name»` or `.field` (leading dot)
    projection: $ => prec.left(PREC.proj, seq(
      optional(field('term', $._expression)),
      choice(
        token.immediate('.'),  // For `x.field` where x is an expression
        '.',                   // For `.field` (leading dot)
      ),
      field('name', choice($.identifier, $.escaped_identifier, $.number)),
    )),

    // Arrow type: `A → B`
    binary_expression: $ => {
      // 6 levels (reduced from 9) to minimize parser states.
      // Merged: or+$ → low, cons+add+product → add.
      const leftAssoc = [
        [PREC.low, choice('||', '∨', '<|>')],
        [PREC.and, choice('&&', '∧')],
        [PREC.compare, choice('==', '!=', '=', '<', '>', '<=', '>=', '≤', '≥', '≠',
                               '∣', '↔', '⊢')],
        [PREC.add, choice('+', '-', '++', '∪', '∩', '×')],
        [PREC.mul, choice('*', '/', '%')],
        [PREC.app + 1, choice('|>', '|>.')],
      ];

      // Right-associative: $, <|, ::, ^, ∘
      const rightAssoc = [
        [PREC.low, '$'],
        [PREC.add, '::'],
        [PREC.mul, choice('^', '∘')],
        [PREC.app + 1, '<|'],
      ];

      return choice(
        ...leftAssoc.map(([precedence, operator]) =>
          prec.left(precedence, seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          )),
        ),
        ...rightAssoc.map(([precedence, operator]) =>
          prec.right(precedence, seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          )),
        ),
      );
    },

    // Prefix operators
    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '¬', '-')),
      field('operand', $._expression),
    )),

    // Monadic lift: `← expr` or `<- expr` in do-blocks
    lift_method: $ => prec(PREC.unary, seq(
      choice('←', '<-'),
      field('operand', $._expression),
    )),

    // Borrowed: `@& expr` — single token so parser distinguishes from `@[` attributes
    borrowed: $ => seq(token(seq('@', '&')), $._expression),

    // Explicit: `@ident` — suppresses implicit arguments
    if: $ => prec.right(seq(
      'if',
      optional(seq(field('hyp', $.identifier), ':')),
      field('condition', $._expression),
      $._then_else,
    )),

    // Shared `then expr [else expr]` tail for `if` and `if_let` — extracted
    // so the parser reuses states across both forms.
    _then_else: $ => prec.right(seq(
      'then',
      field('then', $._expression),
      optional(seq('else', field('else', $._expression))),
    )),

    // If-let pattern matching: `if let some x := e then ...`
    // Parsed as do-element or standalone, uses `let` keyword after `if`
    match: $ => prec.left(seq(
      'match',
      field('scrutinees', commaSep1($._expression)),
      'with',
      repeat1($.match_arm),
    )),

    match_arm: $ => seq(
      '|',
      field('patterns', commaSep1($._expression)),
      '=>',
      field('body', $._expression),
    ),

    // Do notation with layout-sensitive parsing
    // Elements are separated by newlines at the same indentation level
    do: $ => prec.right(seq(
      'do',
      $._layout_start,
      $._do_seq,
      optional($._layout_end),
    )),

    // Sequence of do elements separated by layout semicolons or explicit semicolons
    _do_seq: $ => prec.right(seq(
      $._do_element,
      repeat(seq(
        choice($._layout_semicolon, ';'),
        $._do_element,
      )),
    )),

    parenthesized: $ => seq(
      '(',
      optional(seq(
        $._expression,
        optional(seq(':', field('type', $._expression))),
      )),
      ')',
    ),

    // Named argument: `(name := value)`
    named_argument: $ => seq(
      '(',
      field('name', $.identifier),
      ':=',
      field('value', $._expression),
      ')',
    ),

    tuple: $ => seq(
      '(',
      $._expression,
      ',',
      commaSep1($._expression),
      ')',
    ),

    anonymous_constructor: $ => seq('⟨', commaSep($._expression), '⟩'),

    array: $ => seq('#[', commaSep($._expression), ']'),

    list: $ => seq('[', commaSep($._expression), ']'),

    // Range syntax: `[:n]`, `[start:end]`, `[start:end:step]`
    range: $ => seq('[', $._range_spec, ']'),

    // Extracted range internals to separate the 3 optional expression
    // slots from the surrounding brackets.
    _range_spec: $ => seq(
      optional(field('start', $._expression)),
      ':',
      optional(field('end', $._expression)),
      optional(seq(':', field('step', $._expression))),
    ),

    // ============================================================
    // Atoms
    // ============================================================

    // Identifier with optional dot-separated parts: `Foo.Bar.baz`
    // Simple identifier without dots - projection handles qualified access
    identifier: _ => /[_a-zA-Zα-ωΑ-Ωℕℤℚℝℂ∇][_a-zA-Z0-9'α-ωΑ-Ωℕℤℚℝℂ∇?!]*/,

    // Escaped identifier: `«name with spaces»`
    escaped_identifier: _ => /«[^»]*»/,

    float: _ => token(prec(1, seq(/\d+/, '.', optional(/\d+/)))),

    number: _ => choice(
      /\d+/,                    // decimal
      /0x[0-9a-fA-F]+/,         // hex
      /0b[01]+/,                // binary
      /0o[0-7]+/,               // octal
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_content: _ => token.immediate(prec(1, /[^"\\{]+/)),

    char: _ => seq("'", choice(/[^'\\]/, /\\./), "'"),

    // Hole/placeholder: `_`
    hole: _ => '_',

    // Cdot: `·` (sugared anonymous function placeholder)
    quoted_name: $ => seq('`', $.identifier),
    double_quoted_name: $ => seq('``', $.identifier),

    // Ellipsis argument: `..`
    ellipsis: _ => '..',

    sorry: _ => 'sorry',

    true: _ => choice('true', 'True'),
    false: _ => choice('false', 'False'),

    // ============================================================
    // Comments
    // ============================================================
